--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'DEEPA-CHERI.github.io/Blog-posts'
 languageCode = 'en-us'
 title = 'Blogs'
 theme = 'PaperMod'
